Added debouncing and click to fill

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="main">
         <form>
             <input type="search" id="search" placeholder="Search"><input type="submit" value="Search">
+            <div id="searchresults"></div>
         </form>
 
         <div id="moviedetails">
